complete stock handlers
